# fastapi-concurrency-limiter

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
examples/: app.py  example_app.py
examples/benchmark/evaluator/: Makefile  aggregate.py  benchmark.js  plot.py
examples/benchmark/test_app/: baseline.py  common.py  limited.py
src/fastapi_concurrency_limiter/: __init__.py  limiter.py  resource.py
tests/: test_limiter.py
