[project]
name = "fastapi-concurrency-limiter"
version = "0.1.0"
description = "Semaphore-based concurrency limiter for FastAPI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
]

[tool.poetry]
packages = [{include = "fastapi_concurrency_limiter", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23"
httpx = "^0.26"
uvicorn = "^0.29"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
