[project]
name = "fastapi-concurrency-limiter"
version = "0.1.0"
description = "Semaphore-based concurrency limiter for FastAPI"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "David Zilahi", email = "zilahia@gmail.com"}]
keywords = ["fastapi", "concurrency", "semaphore", "rate-limiting", "async"]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]

[tool.poetry]
packages = [{include = "fastapi_concurrency_limiter", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23"
httpx = "^0.26"
uvicorn = "^0.29"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
