[project]
name = "fastapi-concurrency-limiter"
version = "0.1.1"
description = "Semaphore-based concurrency limiter for FastAPI"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "David Zilahi", email = "zilahia@gmail.com"}]
keywords = ["fastapi", "concurrency", "semaphore", "rate-limiting", "async"]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/zilahia/fastapi-concurrency-limiter"
Repository = "https://github.com/zilahia/fastapi-concurrency-limiter"

[tool.poetry]
packages = [{include = "fastapi_concurrency_limiter", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
httpx = "^0.28.1"
uvicorn = "^0.49.0"
ruff = "^0.15.20"
pyright = "^1.1.411"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "examples"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
